Overflow fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,8 @@ body {
 	background-image: url(./assets/background.svg);
 	background-size: 100vw auto;
 	background-attachment: fixed;
+
+	overflow-x: hidden;
 }
 
 code {
